--- a/XiaoWei/task2/index2.html
+++ b/XiaoWei/task2/index2.html
@@ -2,18 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>任务一：零基础HTML编码</title>
-	<style type="text/css">
-		img{
-			width: 100px;
-			height: 100px;
-		}
-	</style>
+	<title>任务二：零基础HTML及CSS编码（一）</title>
+	<link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
 <!-- header头部，body下的直接子元素header一般用于放页面的介绍性的信息如网站名称、logo或者导航栏nav -->
 	<header> 
-		<h1>网站一级标题</h1>
+		<img src="img/logo.jpg" alt="logo"/>
 		<nav>
 			<ul>
 				<li><a href="#">导航链接一</a></li>
@@ -27,18 +22,19 @@
 		<article>
 			<h1>文章一级标题</h1>
 			<h2>文章二级标题</h2>
-			<p>文章作者 &nbsp;文章发表时间</p>
-			<p>这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，换行了<br/>
-	这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，<span><a href="http://ife.baidu.com">这里有一个链接到http://ife.baidu.com</a></span>这是一段很长很长的段落，<b>这里有个粗体字</b>这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落。<br/><img src="img/super.jpg" alt="蜘蛛侠"/><br/>
-	这是一段很长很长的段落，这是一段很长很长的段落，<b>这里有个粗体字</b>这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，<span><a href="http://ife.baidu.com" target="_blank">这里有一个链接点击后打开新窗口链接到http://ife.baidu.com</a></span>
+			<span class="author">文章作者 &nbsp;文章发表时间</span>
+			<p>&nbsp;&nbsp;这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，换行了<br/>
+	这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，<span><a href="http://ife.baidu.com">这里有一个链接到http://ife.baidu.com</a></span>这是一段很长很长的段落，<b>这里有个粗体字</b>这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落。		 </p>
+			<img src="img/super.jpg" alt="蜘蛛侠"/><br/>
+			<p>这是一段很长很长的段落，这是一段很长很长的段落，<b>这里有个粗体字</b>这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，<span><a href="http://ife.baidu.com" target="_blank">这里有一个链接点击后打开新窗口链接到http://ife.baidu.com</a></span>
 	这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落。
 			</p>
 		</article>
 		<article>
 			<h1>另一篇文章一级标题</h1>
 			<h2>文章二级标题</h2>
-			<p>文章作者&nbsp;文章发表时间</p>
-			<p>这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，换行了<br/>这是一段很长很长的段落，这是一段很长很长的段落，<span><a href="http://ife.baidu.com">这里有一个链接连接到http://ife.baidu.com</a></span>这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，<b>这里有个粗体字</b>这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落。<br/><img src="img/super.jpg" alt="蜘蛛侠"/><br/>
+			<span class="author">文章作者&nbsp;文章发表时间</span>
+			<p>这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，换行了<br/>这是一段很长很长的段落，这是一段很长很长的段落，<span><a href="http://ife.baidu.com">这里有一个链接连接到http://ife.baidu.com</a></span>这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，<b>这里有个粗体字</b>这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落，这是一段很长很长的段落。<br/><img src="img/super.jpg" alt="蜘蛛侠"/>
 			</p>
 			<ul>
 				<li>列表项目一</li>
@@ -46,8 +42,8 @@
 				<li>列表项目三</li>
 			</ul>
 		</article>
-		<div>
-			<h2>图片</h1>
+		<article>
+			<span style="font-weight: bold; font-size: 28px;">图片</span>
 			<figure>
 				<figcaption>好看的图片</figcaption>
 				<img src="img/super.jpg" alt="蜘蛛侠"/>
@@ -88,17 +84,16 @@
 				<figcaption>好看的图片</figcaption>
 				<img src="img/super.jpg" alt="蜘蛛侠"/>
 			</figure>
-		</div>
+		</article>
 		<article>
 			<h1>最后一篇文章一级标题</h1>
 			<h2>文章二级标题</h2>
-			<p>文章作者&nbsp;文章发表时间</p>
+			<span class="author">文章作者&nbsp;文章发表时间</span>
 			<ol>
 				<li>排名1</li>
 				<li>排名2</li>
 				<li>排名3</li>
 			</ol>
-			<p>下面是一个表格，给表格加了一个border="1"好让你看出是一个表格</p>
 			<table border="1">
 			<caption>表格标题</caption>
 				<thead>
@@ -112,22 +107,22 @@
 					<tr>
 						<td>表内容单元格</td>
 						<td>表内容单元格</td>
-						<td>操作</td>
+						<td><a href="">操作</a></td>
 					</tr>
 					<tr>
 						<td>表内容单元格</td>
 						<td>表内容单元格</td>
-						<td>操作</td>
+						<td><a href="">操作</a></td>
 					</tr>
 					<tr>
 						<td>表内容单元格</td>
 						<td>表内容单元格</td>
-						<td>操作</td>
+						<td><a href="">操作</a></td>
 					</tr>
 					<tr>
 						<td>表内容单元格</td>
 						<td>表内容单元格</td>
-						<td>操作</td>
+						<td><a href="">操作</a></td>
 					</tr>
 				</tbody>
 				<tfoot>
@@ -136,34 +131,42 @@
 						<td colspan="2">1000</td>
 					</tr>
 				</tfoot>
-			</table><br/>
+			</table>
+		</article>
+		<article>
 			<aside>
-				<b>这里以后是一个侧栏，这是侧栏的标题</b>
-				<h1>侧栏注册窗口标题</h1>
+				<span class="celan">这里以后是一个侧栏，这是侧栏的标题</span>
 				<form action="">
-					请输入邮箱地址:<input type="text" name="" value="这是一个文本输入框"/><br/>
+					<div class="form">
+						<label for="email">
+						请输入邮箱地址:
+					</label>
+					<input type="text" name="" value="这是一个文本输入框"/><br/>
 					<mark>邮箱地址请按要求格式输入</mark><br/>
-					请输入密码:<input type="password" name="" value="这是一个文本输入框"/>
-					请重复输入密码:<input type="password" name="" value="这是一个文本输入框"/><br/>
-					密码请为6-16位英文数字<br/>
-					性别:
+					<br/><label for="psw" style="margin-left: 32px;">请输入密码:</label>
+					<input type="password" name="" value="这是一个文本输入框"/><br/>
+					<br/><label for="">请重复输入密码:</label>
+					<input type="password" name="" value="这是一个文本输入框"/><br/>
+					<mark>密码请为6-16位英文数字</mark>
+					<br/><label for="" style="margin-left: 74px">性别:</label>
 						<input type="radio" name="sex" value="男" checked/>男
-						<input type="radio" name="sex" value="女"/>女
-					城市:
+						<input type="radio" name="sex" value="女"/>女<br/>
+					<br/><label for="" style="margin-left: 77px">城市:</label>
 					<select name="city">
 						<option value="北京">北京</option>
 						<option value="西安">西安</option>	
 						<option value="成都">成都</option>
 						<option value="重庆">重庆</option>
 						<option value="珠海">珠海</option>
-					</select>
-					爱好:
+					</select><br/>
+					<br/><label for="" style="margin-left: 72px">爱好:</label>
 						<input type="checkbox" name="habit" value="运动"/>运动
 						<input type="checkbox" name="habit" value="艺术"/>艺术
-						<input type="checkbox" name="habit" value="科学"/>科学
-					个人描述:
-						<textarea name="message" cols="25" rows="2">这是一个多行输入框，输入您的个人描述</textarea>
-						<input type="submit" value="确认提交" />
+						<input type="checkbox" name="habit" value="科学"/>科学<br/>
+					<br/><label for="" style="margin-left: 45px">个人描述:</label>
+						<textarea name="message" cols="100" rows="4">这是一个多行输入框，输入您的个人描述</textarea><br/>
+					</div>
+					<br/><input class="button" type="submit" value="确认提交" />
 				</form>
 			</aside>
 		</article>
