--- a/XiaoWei/task3/index3.html
+++ b/XiaoWei/task3/index3.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>任务三：三栏式布局</title>
-	<link rel="stylesheet" href="css/main.css" type="text/css">
+	<link rel="stylesheet" href="main.css" type="text/css">
 </head>
 <body>
 	<div id="container">
