add Observer Method

--- a/设计模式/行为型设计模式/index.html
+++ b/设计模式/行为型设计模式/index.html
@@ -5,6 +5,7 @@
   <title>模板方法模式</title>
 </head>
 <body>
-<script type="text/javascript" src="1模板方法模式/template.js"></script>
+<!--<script type="text/javascript" src="1模板方法模式/template.js"></script>-->
+<script type="text/javascript" src="2观察者模式/observer1.js"></script>
 </body>
 </html>
