add Observer mesage

--- a/设计模式/行为型设计模式/index.html
+++ b/设计模式/行为型设计模式/index.html
@@ -7,5 +7,6 @@
 <body>
 <!--<script type="text/javascript" src="1模板方法模式/template.js"></script>-->
 <script type="text/javascript" src="2观察者模式/observer1.js"></script>
+<script type="text/javascript" src="2观察者模式/observer2.js"></script>
 </body>
 </html>
