--- a/设计模式/行为型设计模式/index.html
+++ b/设计模式/行为型设计模式/index.html
@@ -8,6 +8,7 @@
 <!--<script type="text/javascript" src="1模板方法模式/template.js"></script>-->
 <!--<script type="text/javascript" src="2观察者模式/observer1.js"></script>-->
 <!--<script type="text/javascript" src="2观察者模式/observer3.js"></script>-->
-<script type="text/javascript" src="3状态模式/state2.js"></script>
+<!--<script type="text/javascript" src="3状态模式/state2.js"></script>-->
+<script type="text/javascript" src="4策略模式/strategy.js"></script>
 </body>
 </html>
