add Chain of Responsibility Method

--- a/设计模式/行为型设计模式/index.html
+++ b/设计模式/行为型设计模式/index.html
@@ -9,6 +9,7 @@
 <!--<script type="text/javascript" src="2观察者模式/observer1.js"></script>-->
 <!--<script type="text/javascript" src="2观察者模式/observer3.js"></script>-->
 <!--<script type="text/javascript" src="3状态模式/state2.js"></script>-->
-<script type="text/javascript" src="4策略模式/strategy1.js"></script>
+<!--<script type="text/javascript" src="4策略模式/strategy1.js"></script>-->
+<script type="text/javascript" src="5职责链模式/chain.js"></script>
 </body>
 </html>
