add Command Method

--- a/设计模式/行为型设计模式/index.html
+++ b/设计模式/行为型设计模式/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>模板方法模式</title>
+  <title>设计模式</title>
 </head>
 <body>
+<div id="title"></div>
+<div id="product"></div>
 <!--<script type="text/javascript" src="1模板方法模式/template.js"></script>-->
 <!--<script type="text/javascript" src="2观察者模式/observer1.js"></script>-->
 <!--<script type="text/javascript" src="2观察者模式/observer3.js"></script>-->
 <!--<script type="text/javascript" src="3状态模式/state2.js"></script>-->
 <!--<script type="text/javascript" src="4策略模式/strategy1.js"></script>-->
-<script type="text/javascript" src="5职责链模式/chain.js"></script>
+<!--<script type="text/javascript" src="5职责链模式/chain.js"></script>-->
+<script src="6命令模式/command.js"></script>
 </body>
 </html>
