--- a/设计模式/行为型设计模式/index.html
+++ b/设计模式/行为型设计模式/index.html
@@ -13,6 +13,7 @@
 <!--<script type="text/javascript" src="3状态模式/state2.js"></script>-->
 <!--<script type="text/javascript" src="4策略模式/strategy1.js"></script>-->
 <!--<script type="text/javascript" src="5职责链模式/chain.js"></script>-->
-<script src="6命令模式/command.js"></script>
+<!--<script src="6命令模式/command.js"></script>-->
+<script src="7访问者模式/visitor2.js"></script>
 </body>
 </html>
