add Memento Method

--- a/设计模式/行为型设计模式/index.html
+++ b/设计模式/行为型设计模式/index.html
@@ -14,6 +14,7 @@
 <!--<script type="text/javascript" src="4策略模式/strategy1.js"></script>-->
 <!--<script type="text/javascript" src="5职责链模式/chain.js"></script>-->
 <!--<script src="6命令模式/command.js"></script>-->
-<script src="7访问者模式/visitor2.js"></script>
+<!--<script src="7访问者模式/visitor2.js"></script>-->
+<script src="8中介者模式/mediator.js"></script>
 </body>
 </html>
